Drop sbx env from opt-out workflows

--- a/.github/workflows/opt-out-export-apply.yml
+++ b/.github/workflows/opt-out-export-apply.yml
@@ -27,7 +27,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d, bcda, dpc]
-        env: [dev, test, sbx, prod]
+        env: [dev, test, prod]
     env:
       TF_VAR_app: ${{ matrix.app }}
       TF_VAR_env: ${{ matrix.env }}
