--- a/.github/workflows/snyk-ecr-integration-apply.yml
+++ b/.github/workflows/snyk-ecr-integration-apply.yml
@@ -21,7 +21,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d, bcda, dpc]
+        app: [ab2d]
         env: [dev, test, sbx, prod]
         include:
           - app: bcda
