--- a/.github/workflows/snyk-ecr-integration-plan.yml
+++ b/.github/workflows/snyk-ecr-integration-plan.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        app: [ab2d, bcda, dpc]
+        app: [ab2d]
         env: [dev, test, sbx, prod]
         include:
           - app: bcda
