--- a/.github/workflows/github-actions-oidc-provider-plan.yml
+++ b/.github/workflows/github-actions-oidc-provider-plan.yml
@@ -28,7 +28,7 @@ jobs:
       fail-fast: false
       matrix:
         app: [ab2d]
-        env: [dev, test, sbx, prod]
+        env: [mgmt, dev, test, sbx, prod]
         include:
           - app: bcda
             env: mgmt
