--- a/.github/workflows/cclf-import-apply.yml
+++ b/.github/workflows/cclf-import-apply.yml
@@ -44,10 +44,9 @@ jobs:
       - name: notify slack
         id: slack
         uses: slackapi/slack-github-action@v1.24.0
-        # https://api.slack.com/apps/<your-app-id>/incoming-webhooks
         if: ${{ failure() }}
         with:
-          channel-id: 'T07AYTHK0QJ' # slack channel #alerts-test
+          channel-id: 'T07AYTHK0QJ'
           payload: |
             {
               "text": "GitHub Action failed",
@@ -56,7 +55,7 @@ jobs:
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "*Production deployment check failed* :fire_engine:\n High error rate detected after deployment! Rolling back..."
+                    "text": "*Terraform apply failure*"
                   }
                 },
                 {
@@ -66,18 +65,10 @@ jobs:
                       "type": "button",
                       "text": {
                         "type": "plain_text",
-                        "text": ":github: Failed action"
+                        "text": "Link to failed job"
                       },
                       "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
                     },
-                    {
-                      "type": "button",
-                      "text": {
-                        "type": "plain_text",
-                        "text": ":grafana: Grafana dashboard"
-                      },
-                      "url": "https://www.google.com/"
-                    }
                   ]
                 }
               ]
