--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -1,7 +1,9 @@
 name: api-waf plan terraform
 
 on:
-  pull_request:
+  push:
+    branches:
+      - main
     paths:
       - .github/workflows/api-waf-plan.yml
       - terraform/services/api-waf/**
