--- a/.github/workflows/api-waf-apply.yml
+++ b/.github/workflows/api-waf-apply.yml
@@ -1,11 +1,11 @@
-name: api-waf plan terraform
+name: api-waf apply terraform
 
 on:
   push:
     branches:
       - main
     paths:
-      - .github/workflows/api-waf-plan.yml
+      - .github/workflows/api-waf-apply.yml
       - terraform/services/api-waf/**
   workflow_dispatch: # Allow manual trigger
 
